# pay-calc-plus

./: .gitignore  README.md  justfile  pyproject.toml
main/: calculations.py  db_commands.py  pay-calc.py  records_window.py
src/pay_calc_plus/: calculations.py  config.py  coordinator.py  db_commands.py  main.py  payroll_models.py  ui.py
src/pay_calc_plus/legacy_app/: calculations.py  db_commands.py  main.py
src/pay_calc_plus/refactor/: calculations.py  config.py  coordinator.py  payroll_models.py  ui.py
tests/: test_db_commands.py  test_paycheck.py  test_payroll_coordinator.py  test_ui.py
